<resources>
    <string name="app_name">Vanken</string>
    <string name="ingresar">Ingresar</string>
    <string name="registro">Registrarme</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="confirmarPassword">Confirmar contraseña</string>
    <string name="login_failed">"Login failed"</string>
    <string name="nombre">Nombre</string>
    <string name="serviciosSemanales">Servicios técnicos semanales</string>
    <string name="ganancias">Ganancias semanales</string>

    <string name="apellidos">Apellidos</string>
    <string name="title_activity_main_admin">MainAdmin</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Administrador</string>
    <string name="nav_header_subtitle">Leonardo Martínez</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_cliente">Cliente</string>
    <string name="peticiones">Peticiones</string>
    <string name="acerca">Nosotros</string>
    <string name="action_settings">Configuraciones</string>
    <string name="mejorTecnico">Mejor técnico  </string>
    <string name="agregarTecnico">Agregar técnico</string>
    <string name="telefono">Teléfono</string>
    <string name="user">Username</string>
    <string name="menu_estadisticas">Estadísticas</string>
    <string name="menu_tecnicos">Técnicos</string>
    <string name="menu_reportes">Reportes</string>
    <string name="menu_tools">Configuraciones</string>
    <string name="menu_peticiones">Peticiones</string>
    <string name="calificacion">Calificación</string>
    <string name="rango">Rango en km</string>
    <string name="alfabeticamente">A-Z</string>
    <string name="editar">Editar</string>
    <string name="cliente">Cliente</string>
    <string name="tecnico">Tecnico</string>
    <string name="eliminar">Eliminar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_cliente">MainCliente</string>
    <string name="Telefono">Telefono</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="historico">Historico</string>
    <string name="servicios_disponibles">Servicios Disponibles</string>
    <string name="log_out">Cerrar sesión</string>
    <string name="configuraci_n">Configuración</string>
    <string name="imagenusuario">ImagenUsuario</string>
    <string name="nav_close_tec">Cerrar Nav</string>
    <string name="nav_open_tec">Abrir Nav</string>
    <string name="todo">TODO</string>
    <string name="olvidaste_tu_contrase_a">¿Olvidaste tu contraseña?</string>
    <string name="a_n_sin_cuenta_reg_strate">¿Aún sin cuenta? Regístrate</string>
    <string name="url">https://www.solfeggio528.com/vanken/webservice.php</string>
    <string name="aceptar">Aceptar</string>
    <string name="finalizar">Finalizar</string>
    <string name="servicio">Servicio:</string>
    <string name="tiempo_activo">Tiempo Activo</string>
    <string name="cliente_">Cliente:</string>
    <string name="evaluaci_n_del_servicio">Evaluación del Servicio</string>
    <string name="obsevaciones">Obsevaciones</string>
    <string name="generar_queja">Generar Queja</string>
    <string name="selecciona_la_categor_a_del_servicio">Selecciona la categoría del Servicio</string>
    <string name="selecciona_la_subcategor_a_del_servicio">Selecciona la subcategoría del servicio</string>
    <string name="ingresa_la_comisi_n_por_servicio">Ingresa la comisión por Servicio</string>
    <string name="textview">TextView</string>
    <string name="indica_si_se_usaron_materiales_extras">Indica si se usaron materiales Extras</string>
    <string name="precio_0">Precio: $0</string>
    <string name="direccion">Dirección</string>
    <string name="ingresaDireccion">Ingresa la dirección</string>
    <string name="problema">Problema</string>
    <string name="descripcionProblema">Describe brevemente el problema a atender</string>
    <string name="categorias">Categorias</string>
    <string name="descripcionCategorias">Selecciona las categorias a las que pertenece el problema</string>
    <string name="internet">Internet</string>
    <string name="computadora">Computadora</string>
    <string name="programas">Programas</string>
    <string name="impresoraa">Impresora</string>
    <string name="ofimatica">Ofimatica</string>
    <string name="celular">Celular</string>
    <string name="agregarPeticion">Agregar Petición</string>
    <string name="fecha">Fecha</string>
    <string name="de_petici_n"># de Petición: </string>
    <string name="domicilio">Domicilio: </string>
    <string name="categor_a">Categoría: </string>
</resources>
