<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:icon="@drawable/ic_reportes_white_24dp"
            android:iconTint="@color/colorPrimaryDark"
            android:title="@string/servicios_disponibles" />
        <item
            android:icon="@drawable/history"
            android:iconTint="@color/colorPrimaryLight"
            android:title="@string/historico" />
    </group>
    <group >
        <item
            android:icon="@drawable/settings"
            android:iconTint="@color/colorPrimaryLight"
            android:title="@string/configuraci_n" />
        <item
            android:icon="@drawable/log_out"
            android:iconTint="@color/colorPrimaryLight"
            android:title="@string/log_out" />
    </group>
</menu>