<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_estadisticas"
            android:icon="@drawable/ic_show_chart_white_24dp"
            android:iconTint="@color/white"
            android:title="@string/menu_estadisticas" />
        <item
            android:id="@+id/nav_tecnicos"
            android:icon="@drawable/ic_group_white_24dp"
            android:title="@string/menu_tecnicos" />
        <item
            android:id="@+id/nav_reportes"
            android:icon="@drawable/ic_reportes_white_24dp"
            android:title="@string/menu_reportes" />
    </group>
    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_tools"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/menu_tools" />
        </menu>
    </item >

</menu>
