<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_estadisticas">

    <fragment
        android:id="@+id/nav_estadisticas"
        android:name="com.example.vanken.ui.estadisticas.EstadisticasFragment"
        android:label="@string/menu_estadisticas"
        tools:layout="@layout/fragment_estadisticas" />

    <fragment
        android:id="@+id/nav_tecnicos"
        android:name="com.example.vanken.ui.tecnicos.TecnicosFragment"
        android:label="@string/menu_tecnicos"
        tools:layout="@layout/fragment_tecnicos" />

    <fragment
        android:id="@+id/nav_reportes"
        android:name="com.example.vanken.ui.reportes.ReportesFragment"
        android:label="@string/menu_reportes"
        tools:layout="@layout/fragment_reportes" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.vanken.ui.tools.ConfiguracionesFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_configuraciones" />

</navigation>