<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EvaluarServicioTecnicoActivity"
    android:padding="18dp">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_horizontal"
        android:gravity="center"
        android:text="@string/evaluaci_n_del_servicio"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <RatingBar
        android:id="@+id/ratingEvaluacionServicioTecnico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:rating="0"
        android:stepSize="1"
        android:layout_marginTop="15dp"/>

    <EditText
        android:id="@+id/edtComentarioEvalucaionTecnico"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/obsevaciones"
        android:inputType="textMultiLine"
        android:textColor="@android:color/black"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:text="@string/selecciona_la_categor_a_del_servicio"
        android:layout_marginTop="10dp"/>

    <Spinner
        android:id="@+id/spCategoriaEvalucionTecnico"
        android:layout_width="match_parent"
        android:textColor="@android:color/black"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:text="@string/selecciona_la_subcategor_a_del_servicio"
        android:layout_marginTop="10dp"/>

    <Spinner
        android:id="@+id/spSubcategoriaEvaluacionTecnico"
        android:textColor="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ingresa_la_comisi_n_por_servicio"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/editTextNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:textColor="@android:color/black"
            />
    </LinearLayout>

    <Switch
        android:id="@+id/switchMaterialesExtras"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/indica_si_se_usaron_materiales_extras" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:textColor="@android:color/black"
            android:text="@string/precio_0" />

        <TextView
            android:id="@+id/txtPrecioEvaluacionTecnico"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@android:color/black"
            android:text="@string/textview" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/btnFinalizarEvaluacionTecnico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/finalizar"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/btnGenerarQuejaEvaluacionTecnico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/generar_queja"
            android:textColor="@android:color/white"/>
    </LinearLayout>

</LinearLayout>