<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".AgregarTecnicoFragment"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="30dp"
        android:paddingTop="10dp"
        android:paddingRight="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/imageView11"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="145dp"
                    android:layout_marginLeft="@dimen/margin_large"
                    android:layout_height="146dp"
                    android:src="@mipmap/user_icon" />

                <ImageButton
                    android:id="@+id/imgBtnImagenRegistro"
                    android:layout_width="wrap_content"
                    android:layout_gravity="bottom"

                    android:layout_height="wrap_content"
                    android:background="#00FFFFFF"
                    android:src="@android:drawable/ic_menu_edit" />
            </LinearLayout>
            <EditText
                android:id="@+id/editTextNombreAgregarTecnico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:hint="@string/nombre"></EditText>
                <EditText
                    android:id="@+id/editTextApellidosAgregarTecnico"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_small"
                    android:hint="@string/apellidos"></EditText>

            <EditText
                android:id="@+id/editTextTelefonoAgregarTecnico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/telefono"
                android:layout_marginBottom="@dimen/margin_small"
                android:inputType="phone"></EditText>

            <EditText
                android:id="@+id/editTextUsernameAgregarTecnico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:hint="@string/user"
                ></EditText>
            <EditText
                android:id="@+id/editTextPasswordAgregarTecnico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:hint="@string/password"
                ></EditText>
            <EditText
                android:id="@+id/editTextConfirmarPasswordAgregarTecnico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:hint="@string/confirmarPassword"
                ></EditText>
            <EditText
                android:id="@+id/editTextRangoAgregarTecnico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:hint="@string/rango"
                ></EditText>
            <Button
                android:id="@+id/btnAgregarTecnico"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="@dimen/margin"
                android:padding="@dimen/margin_small"
                android:background="@color/colorAccent"
                android:foregroundGravity="bottom"
                android:text="@string/agregarTecnico"
                android:textColor="@color/white"
                ></Button>


        </LinearLayout>
    </ScrollView>
</FrameLayout>