<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuejaDeTecnicoActivity">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="374dp"
        android:layout_height="412dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="Información del Servicio"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtIDQuejaTecnico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/de_petici_n"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtFechaQuejaTecnico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fecha"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtClienteQuejaTecnico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cliente"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtDomicilioQueja"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/domicilio"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtCategoriaQuejaTecnico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/categor_a"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtComentarioQueja"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Comentario"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edtQuejaTecnico"
                android:layout_width="362dp"
                android:layout_height="216dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="Escribe aquí tu reporte"
                android:inputType="textMultiLine"
                android:textColor="@android:color/black" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnAceptarQueja"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/aceptar"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView3"
        app:layout_constraintVertical_bias="0.112" />

</androidx.constraintlayout.widget.ConstraintLayout>